Revision history for Perl extension AnyEvent.

	- implement AnyEvent::Handle->destroy method.
	- hint about unexpected effects in tls mode.

4.3  Fri Oct  3 09:18:43 CEST 2008
	- AnyEvent will now install a no-op signal handler for SIGPIPE,
          unless one has been installed already.
        - warn about not loaidng AnyEvent::Impl::POE early enough
          (patch by Adam Rosenstein).
	- fixed a great number of bugs and corner cases in AnyEvent::Handle:
        - fix a bug in where in SSL connect mode, the
          client would first wait for some data by the server and
          otherwise hang. (reported and analyzed in an absolutely
          exemplary manner by Adam Rosenstein).
        - fix a bug in where SSL EOF would not be treated
          as stream EOF, putting the connection into a hung state.
          (reported and analyzed in an absolutely exemplary manner by Adam
          Rosenstein).
        - fix a potential segfault when the TLS context
          would go missing in a read callback (e.g. due to stoptls) -
          Net::SSLeay of course makes no type checking whatsoever.
        - AnyEvent::Handle will not stop the read watcher in TLS mode.
        - AnyEvent::Handle->stoptls will send a TLS close notify
          instead of simply destroying the stream now.
        - fix a bug where large blocks of data written in TLS mode
          would not be sent unless triggered by receives.
        - on_drain will now take the tls write buffer into account.
        - SSL operations have been streamlined a bit and should be faster
          now, more to come, though.
        - added a FAQ section, will document nontrivial issues in there.

4.234 Mon Sep 29 04:08:13 CEST 2008
	- fix child watcher documentation: only child exits will be reported,
          no trace events.
        - mention SIGPIPE in AnyEvent::Handle.
	- perl backend will now use POSIX::times as monotonic clock
          when available and the monotonic clock option is not.